<resources>
    <string name="app_name">GCU Are Here</string>
    <string name="button_send">Indoor Example</string>
    <string name="tView">TextView</string>
    <string name="get_mapping">Get Mapping!</string>
    <string name="title_activity_maps">Map</string>
    <!--     Indoor    -->
    <string name="activate_higher_level">Activate Higher Level</string>
    <string name="focused_building_info">Focused Building</string>
    <string name="focused_level_info">Focused Level</string>
    <string name="indoor_demo_description">Demonstrates how to use the Indoor API.</string>
    <string name="indoor_demo_label">Indoor</string>
    <string name="toggle_level_picker">Toggle Level Picker</string>
    <string name="live_map">Live Map</string>
    <string name="get_last">Get Last Location</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_more_maps">Map</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>



    <!--    Styling    -->
    <string name="styled_map_demo_label">Styled Map</string>
    <string name="styled_map_demo_description">Demonstrates how to style a map.</string>
    <string name="style_label_retro">Retro</string>
    <string name="style_label_night">Night</string>
    <string name="style_label_grayscale">Grayscale</string>
    <string name="style_label_no_pois_no_transit">No POIs or transit</string>
    <string name="style_label_default">Default</string>
    <string name="style_choose">Choose style</string>
    <string name="style_set_to">Style set to: %1$s</string>
    <string name="styleMapBtn">Style a Map</string>
</resources>
