<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="uk.co.gingerflan.gcuarehere.MainActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">


    <Button
        android:id="@+id/getLastLocBtn"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="210dp"
        android:layout_height="50dp"
        android:layout_marginTop="14dp"
        android:background="@color/colorPrimary"
        android:onClick="onClick"
        android:text="@string/get_last"
        android:textColor="?android:attr/textColorPrimaryInverse"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/indoorMapBtn"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/welcomeTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/get_mapping"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/indoorMapBtn"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="210dp"
        android:layout_height="50dp"
        android:background="?attr/colorPrimary"
        android:onClick="onClick"
        android:text="@string/button_send"
        android:textColor="?android:attr/textColorPrimaryInverse"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/liveMapBtn" />

    <Button
        android:id="@+id/loginBtn"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="210dp"
        android:layout_height="50dp"
        android:background="?attr/colorPrimary"
        android:onClick="onClick"
        android:text="@string/action_sign_in"
        android:textColor="?android:attr/textColorPrimaryInverse"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="128dp"
        app:layout_constraintTop_toBottomOf="@+id/welcomeTxt" />

    <Button
        android:id="@+id/liveMapBtn"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="210dp"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:onClick="onClick"
        android:text="@string/live_map"
        android:textColor="?android:attr/textColorPrimaryInverse"
        tools:ignore="RtlHardcoded"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toBottomOf="@+id/loginBtn" />

    <Button
        android:id="@+id/styleMapBtn"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="210dp"
        android:layout_height="50dp"
        android:layout_marginTop="14dp"
        android:background="@color/colorPrimary"
        android:onClick="onClick"
        android:text="@string/styleMapBtn"
        android:textColor="?android:attr/textColorPrimaryInverse"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/getLastLocBtn"
        tools:ignore="RtlHardcoded" />

</android.support.constraint.ConstraintLayout>
